# fullstack-projects

./: .gitattributes  .gitignore  README.md
django-react-projects/Account/: README.md
django-react-projects/Account/backend/: pyproject.toml
django-react-projects/Account/backend/core/: settings.py  urls.py
django-react-projects/Account/frontend/: package-lock.json  package.json
django-react-projects/Calendar/: README.md
django-react-projects/Calendar/backend/: pyproject.toml
django-react-projects/Calendar/backend/calender/: admin.py  models.py  serializers.py  urls.py  views.py
django-react-projects/Calendar/backend/core/: settings.py  urls.py
django-react-projects/Calendar/frontend/: package-lock.json  package.json
django-react-projects/Calendar/frontend/src/: App.css  App.js  index.css
django-react-projects/Crud/backend/: pyproject.toml
django-react-projects/Crud/backend/core/: settings.py  urls.py
django-react-projects/Crud/backend/crud/: admin.py  models.py  serializers.py  urls.py  views.py
django-react-projects/Crud/backend/crud/migrations/: 0001_initial.py
django-react-projects/Crud/frontend/: package-lock.json  package.json
django-react-projects/Crud/frontend/src/: App.js
django-react-projects/Dashboard/: README.md
django-react-projects/Dashboard/backend/: pyproject.toml
django-react-projects/Dashboard/frontend/: package-lock.json  package.json
django-react-projects/Trip/: README.md
django-react-projects/Trip/backend/: pyproject.toml
django-react-projects/Trip/frontend/: package-lock.json  package.json
django-react-projects/User/: README.md
django-react-projects/User/client/: package-lock.json  package.json
django-react-projects/User/server/: pyproject.toml
django-react-projects/User/server/core/: settings.py  urls.py
django-react-projects/User/server/user/: authenticate.py  models.py  serializers.py  urls.py  views.py
django-react-projects/User/server/user/migrations/: 0001_initial.py
fastapi-react-projects/Chat/: README.md
fastapi-react-projects/Chat/backend/: main.py  pyproject.toml
fastapi-react-projects/Chat/frontend/: package-lock.json
fastapi-react-projects/Tool/: README.md
fastapi-react-projects/Tool/backend/: main.py  pyproject.toml
fastapi-react-projects/Tool/frontend/: package-lock.json  package.json
flask-react-projects/Besties/: README.md
flask-react-projects/Besties/backend/: app.py  app.py.bak  extensions.py  models.py  models.py.bak  pyproject.toml  routes.py  routes.py.bak  wsgi.py
flask-react-projects/Besties/frontend/: package-lock.json  package.json
(+121 files in other folders)
