[tool.poetry]
name = "flask-react-besties"
version = "0.1.0"
description = ""
authors = ["zoelinsg <zoelin.sg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-wtf = "^1.2.1"
flask-bootstrap = "^3.3.7.1"
flask-script = "^2.0.6"
flask-bcrypt = "^1.0.1"
flask-migrate = "^4.0.7"
flask-mail = "^0.10.0"
flask-login = "^0.6.3"
flask-babel = "^4.0.0"
flask-markdown = "^0.3"
flask-sqlalchemy = "^3.1.1"
requests = "^2.32.3"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
